# shirabe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile
docs/: shirabe-api-contract.md
migrations/: 0001_shirabe_search_indexes.sql  0002_release_date_year_indexes.sql  0003_shirabe_schema.sql
migrations/imdb/: 0001_imdb_tables.sql  README.md
migrations/shirabe/: 0001_init.sql
migrations/tmdb/: 0001_tmdb_tables.sql
migrations/tvdb/: 0001_tvdb_tables.sql
src/: config.rs  date.rs  db.rs  error.rs  handlers.rs  images.rs  main.rs  migrate.rs  models.rs  query.rs  repo.rs  search.rs
src/facades/: mod.rs  tmdb.rs  tvdb.rs
src/sources/: imdb.rs  mod.rs  musicbrainz.rs  tmdb.rs  tvdb.rs  wikidata.rs  xref.rs
