[package]
name = "shirabe"
version = "0.3.2"
edition = "2024"
license = "WTFPL"
authors = ["DorskFR"]
description = "A small, fast MusicBrainz ws/2 subset served directly from a MusicBrainz Postgres mirror via pg_trgm."

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
struct_field_names = "allow"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "charset"] }
flate2 = "1"
csv = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
